TC-005/005-pod-invalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-uses-latest
spec:
  containers:
    - name: nginx
      image: nginx:latest
