TC-005/005-pod-valid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-uses-tag
spec:
  containers:
    - name: nginx
      image: nginx:1.25.2
